--- a/app/src/main/res/values/splash_theme.xml
+++ b/app/src/main/res/values/splash_theme.xml
@@ -5,6 +5,7 @@
         
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/test_splash_icon</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.TaskForWebant</item>
+        <item name="windowSplashScreenBackground">@color/green</item>
         
     </style>
     
