--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.TaskForWebant" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--         <item name="colorPrimary">@color/green</item>-->
+<!--        <item name="android:windowFullscreen">true</item>-->
     </style>
 
     <style name="Theme.TaskForWebant" parent="Base.Theme.TaskForWebant" />
